--- a/style.css
+++ b/style.css
@@ -1,36 +1,107 @@
-body{
+html, body{
     margin: 0;
     padding: 0;
-    font-family: Poppins;
+    font-family: 'Varela Round', sans-serif;
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+    font-size: CALC(1em * 0.8);
+    font-weight: bold;
 }
-
+h2 {
+    margin: 0;
+}
+a{
+    text-decoration: none;
+    color: inherit;
+}
+ul, li{
+    list-style-type: none;
+}
 .topnav {
+    top: 0;
+    position: fixed;
+    width: 100%;
+    height: 66px;
+    line-height: 66px;
     display: flex;
     flex-direction: row;
     align-items: center;
     background-color: #ED6C6D;
+}
+.burger{
+    padding: 25px;
+    cursor: pointer;
+}
+.logo-title{
+    display: flex;
+    align-items: center;
+    justify-content:;
+}
+.logo{
+    display: flex;
+    height: 66px;
+    justify-content: center;
+}
+.coin{
+    display: flex;
+    width: 33%;
+    font-family: Ubuntu;
+    font-style: italic;
+    color: #FBE32C;
+    text-shadow: 0 0 #000000;
+}
+.menu_desktop{
+    display: none;
 }
 .logo-reseaux-sociaux{
     display: flex;
     flex-direction: row;
     margin: 0 auto;
 }
-.logo{
-    width : 20%;
+@media only screen and (min-width : 375px) {
+    .burger{
+        display: none;
+        width: 50px;
+        height: 50px;
+        background-image:url('img/W-logo-white-coralback-_1_.webp');
+    }
+    li {
+        list-style-type: none;
+        padding: 0 10px;
+    }
+    .menu_desktop{
+        display : flex;
+        flex-direction: row;
+    }
+    .nav-menu{
+        display: none;
+    }
+
 }
-.logo-title{
+
+nav{
+    margin-top: 66px;
+}
+
+.nav-menu{
+    position: static;
+    width: 100%;
+    background-color: chartreuse;
+}
+.nav-slider{
     display: flex;
+    flex-direction: column;
     align-items: center;
+    margin: 0;
+    padding: 0;
 }
-
-.coin{
-    font-family: Ubuntu;
-    font-style: italic;
-    color: #FBE32C;
-    text-shadow: 0 0 #000000;
-    text-decoration: none;
+.nav-slider-menu-x{
+    top: 66px;
+    position: absolute;
+    right: 0;
+    cursor: pointer;
 }
-
-.burger{
-    padding: auto;
+.nav-slider-menu{
+    display: flex;
 }
