--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
+
 body{
     margin: 0;
     padding: 0;
@@ -33,7 +35,6 @@ ul, li{
 }
 .topnav {
     top: 0;
-    position: fixed;
     width: 100%;
     height: 66px;
     line-height: 66px;
@@ -100,9 +101,10 @@ nav{
     position: static;
     width: 100%;
     background-color: chartreuse;
+    display: none;
 }
 .nav-slider{
-    display: flex;
+    display: none;
     flex-direction: column;
     align-items: center;
     margin: 0;
@@ -119,6 +121,7 @@ nav{
 }
 
 /* Team */
+
 .container{
     display: flex;
 }
@@ -149,7 +152,7 @@ nav{
     margin-top: 10px;
     margin-bottom: 10px;
     border: 1px solid #ED6C6D;
-    box-shadow: 5px 5px 5px grey;
+    box-shadow: 3px 2px 7px grey;
     padding: 0px 10px 0px;
     border-radius: 10px;
 }
@@ -178,3 +181,13 @@ nav{
 .text-description{
     display: none;
 }
+
+@media (orientation: landscape) {
+    #body-container{
+        min-height: 200vh;
+    }
+
+    .item{
+        height: 40vh;
+    }
+  }
