--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 html, body{
     margin: 0;
     padding: 0;
-    font-family: 'Varela Round', sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-weight: normal;
     font-style: normal;
     font-display: swap;
@@ -43,32 +45,34 @@ ul, li{
     position: absolute;
     top: 50%;
     display: block;
-    width: 3rem;
-    height: 4px;
+    width: 2.8rem;
+    height: 3px;
     background-color: #FFFFFF;
     transition: background-color 0.4s ease-in-out;
     margin: auto 1rem;
+    border-radius: 2px;
 }
 .burger span::before, .burger span::after {
     content:'';
     position: absolute;
     display: block;
     width: 100%;
-    height: 4px;
+    height: 3px;
     background-color: #FFFFFF;
     transition: transform 0.4s ease-in-out;
+    border-radius: 2px;
 }
 .burger span::before{
-    transform: translateY(-12px);
+    transform: translateY(-10px);
 }
 .burger:hover > ::before{
-    transform: translateY(-15px);
+    transform: translateY(-12px);
 }
 .burger span::after{
-    transform: translateY(12px);
+    transform: translateY(10px);
 }
 .burger:hover > ::after{
-    transform: translateY(15px);
+    transform: translateY(12px);
 }
 .burger.active span {
     background-color: transparent;
@@ -91,19 +95,17 @@ ul, li{
 .coin{
     display: flex;
     width: 33%;
-    font-family: Ubuntu;
     font-style: italic;
+    font-weight: 900;
     color: #FBE32C;
-    text-shadow: 0 0 #000000;
+    font-size: 2.2rem;
+    text-shadow: 2px 2px 1px #000000;
+    letter-spacing: .2rem;
 }
 .menu-desktop{
     display: none;
 }
-.logo-reseaux-sociaux{
-    display: flex;
-    flex-direction: row;
-    margin: 0 auto;
-}
+
 @media only screen and (min-width : 375px) {
     .burger{
         display: none;
@@ -118,24 +120,43 @@ ul, li{
     .menu-desktop{
         display : flex;
         flex-direction: row;
+        font-size: 1.2rem;
+        margin: 0;
+    }
+    .menu-desktop-li:hover{
+        text-decoration: underline;
+        font-size: 1.5rem;
+        font-weight: 900;
+        transition: font-size 0.3s ease-in-out;
+        text-align: center;
     }
     .nav-menu{
         display: none;
     }
+    
 
 }
-
+@media only screen and (max-width : 375px) {
+    footer{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+    }
+    .logo-size{
+        justify-content: space-evenly;
+    }
+}
 nav{
     top: 0;
     position: fixed;
     margin-top: 66px;
 }
-
 .nav-menu{
     width: 100%;
     height :100vh;
-    background-color: #000000;
-    border-right: 3px solid rgba(0, 0, 0, 0.5);
+    background-color: #e6d1d1;
+    opacity: 0.3;
+    border-right: 3px solid rgba(0, 0, 0, 0.9);
     transition-duration: 0.3s;
     transform : translateX(-500px);
 }
@@ -148,6 +169,8 @@ nav{
     align-items: center;
     margin: 0;
     padding: 20px;
+    height: 75vh;
+    justify-content: space-evenly;
 }
 .nav-slider-menu-x{
     top: 66px;
@@ -157,13 +180,14 @@ nav{
 }
 .nav-slider-menu{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     font-size: 3rem;
 }
 .nav-slider-menu:hover {
-    font-size: 110%;
-
-
+    font-size: 3.5rem;
+    text-decoration: underline;
+    font-weight: 900;
+    transition: font-size 0.3s ease-in-out;
 }
 footer{
     position: fixed;
@@ -172,4 +196,30 @@ footer{
     width: 100%;
     height: 66px;
     background-color: #6E7785;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.footer-content{
+    text-align: center;
+    font-size: 1.2rem;
+    padding: 0 3rem;
+}
+.footer-content:hover{
+    text-decoration: underline;
+    font-size: 1.5rem;
+    font-weight: 900;
+    transition: font-size 0.3s ease-in-out;
+}
+.logo-reseaux-sociaux{
+    justify-content: space-evenly;
+    display: flex;
+    flex-direction: row;
+}
+.logo-size{
+    padding: 0 0.5rem;
+}
+.svg-inline--fa, .svg-inline--fa.fa-w-16, .svg-inline--fa.fa-w-18, .svg-inline--fa.fa-w-14{
+    height: 2.5em;
+    width: 2.5em;
 }
