--- a/assets/style.css
+++ b/assets/style.css
@@ -153,10 +153,12 @@ nav{
 }
 .nav-menu{
     width: 100%;
-    height :100vh;
+    height: 100vh;
     background-color: #e6d1d1;
-    opacity: 0.3;
-    border-right: 3px solid rgba(0, 0, 0, 0.9);
+    border-style: solid;
+    border-width: 2px;
+    border-color: #6E7785;
+    opacity: 1;
     transition-duration: 0.3s;
     transform : translateX(-500px);
 }
@@ -182,6 +184,8 @@ nav{
     display: flex;
     justify-content: space-evenly;
     font-size: 3rem;
+    color: #6E7785;
+    opacity: 1;
 }
 .nav-slider-menu:hover {
     font-size: 3.5rem;
