--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -175,24 +175,18 @@ body {
 }
 
 
-#placeholder {
-    height: 70px;
-}
-
-#touchForRefresh {
-    z-index: -999;
-}
-#touchForRefresh img {
-    width: 50px;
-    margin-top: -25px;
-    opacity: 0.3;
-    left: 50%;
+.tableauSurvey{
+    margin-top: 150px;
+    width: 50%;
+    height: 465px;
+    position: relative;
+    right: 100px;
 }
 
 
 .filters{
-    margin-left: 20%;
-    margin-right: 20%;
+    padding-left: 20%;
+    padding-right: 20%;
     height: 80px;
     width: 100%;
     background-color: rgb(22, 22, 54);
@@ -201,7 +195,7 @@ body {
     color: rgba(255, 255, 255, 0.493);
     font-family: "Roboto";
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
 }
 .filters select{
@@ -248,7 +242,7 @@ footer {
 
 
 container {
-    background-color: rgb(4, 4, 31);
+
 }
 
 h1 {
@@ -283,7 +277,7 @@ cards {
     padding-top: 30px;
     padding-bottom: 30px;
 }
-ethereum img{
+card img{
     width: 15px;
     transform: translateY(10px)
 }
@@ -309,7 +303,6 @@ ethereum img{
 }
 
 .btc {
-    
     border: 1px solid rgba(255, 255, 255, 0.548);
 }
 
@@ -330,6 +323,10 @@ ethereum img{
     border: 1px solid rgba(255, 255, 255, 0.473);
 }
 .bnb {
+    
+    border: 1px solid rgba(255, 255, 255, 0.473);
+}
+.myChart {
     
     border: 1px solid rgba(255, 255, 255, 0.473);
 }
@@ -393,22 +390,39 @@ ethereum img{
     .xrp {
         width: 50%;
     }
+    .myChart {
+        width: 50%;
+    }
 }
 
 @media (min-width: 1200px) {
+
+   
+
+    body {
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        flex-direction: row;
+    }
+
     cards {
-        background-color: rgb(12, 12, 29);
-        
+       
+        border: 1px solid grey;
         display: grid;
         grid-template-rows: 200px 200px;
         grid-template-columns: 25% 25% 25%;
         grid-gap: 30px;
-        width: 100%;
-        height: 100%;
+        width: 50%;
+        height: 400px;
         font-size: 10px;
         position: absolute;
-        left: -10px;
-        top: 100px;
+        left: 10px;
+        top:150px;
         align-items: center;
     }
 
@@ -453,7 +467,27 @@ ethereum img{
     .xrp {
         width: 100%;
     }
+    .myChart {
+        width: 200%;
+        border: 0px;
+    }
 
+    #tableauBorder{
+       border: 0px;
+    }
+    #tableauSurvey{
+        border: 1px solid rgba(255, 255, 255, 0.473);
+        width: 900px;
+        
+    }
+    #tableauSurvey:hover {
+        background-color:rgb(17, 17, 56)
+    }
+
+ 
+
+
+   
     .btc,
     .cosmos,
     .ethereum,
@@ -473,4 +507,34 @@ ethereum img{
         margin-bottom: 70px;
         border-radius: 0px;
     }
+
+    .myChart {
+        display: grid;
+        max-width: 300%;
+        min-width: 500px;
+        grid-template-columns: 1fr;
+        grid-template-rows: minmax(50px, 60px) 1fr;
+        grid-template:
+            "info"
+            "chart";
+        border-radius: 30px;
+        margin-top: 30px;
+        margin-bottom: 70px;
+        border-radius: 0px;
+    }
+
+
+
+
 }
+
+
+
+
+
+/* Tableau avec crypto en survey */
+
+
+
+
+
