--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,8 @@
+/* Police */
+
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
+/* HTML Reset */
 
 html, body{
     margin: 0;
@@ -20,11 +24,14 @@ a{
 ul, li{
     list-style-type: none;
 }
+
+/* Barre de navigation */
+
 .topnav {
     top: 0;
     position: fixed;
     z-index: 100;
-    width: 100%;
+    width: 100vw;
     height: 66px;
     line-height: 66px;
     display: flex;
@@ -32,8 +39,10 @@ ul, li{
     align-items: center;
     background-color: #ED6C6D;
 }
+
+/* Menu Burger => X */
+
 .burger{
-    padding: 1rem;
     cursor: pointer;
     width: 5rem;
     height: 5rem;
@@ -45,7 +54,7 @@ ul, li{
     position: absolute;
     top: 50%;
     display: block;
-    width: 2.8rem;
+    width: 2.6rem;
     height: 3px;
     background-color: #FFFFFF;
     transition: background-color 0.4s ease-in-out;
@@ -83,6 +92,9 @@ ul, li{
 .burger.active span::after{
     transform: translateY(0px) rotateZ(-45deg);
 }
+
+/* Logo */
+
 .logo-title{
     display: flex;
     align-items: center;
@@ -94,58 +106,20 @@ ul, li{
 }
 .coin{
     display: flex;
-    width: 33%;
+    width: 100%;
     font-style: italic;
     font-weight: 900;
     color: #FBE32C;
     font-size: 2.2rem;
     text-shadow: 2px 2px 1px #000000;
     letter-spacing: .2rem;
-}
-.menu-desktop{
-    display: none;
+    text-align: center;
+    justify-content: center;
 }
 
-@media only screen and (min-width : 375px) {
-    .burger{
-        display: none;
-        width: 50px;
-        height: 50px;
-        background-image:url('img/W-logo-white-coralback-_1_.webp');
-    }
-    li {
-        list-style-type: none;
-        padding: 0 10px;
-    }
-    .menu-desktop{
-        display : flex;
-        flex-direction: row;
-        font-size: 1.2rem;
-        margin: 0;
-    }
-    .menu-desktop-li:hover{
-        text-decoration: underline;
-        font-size: 1.5rem;
-        font-weight: 900;
-        transition: font-size 0.3s ease-in-out;
-        text-align: center;
-    }
-    .nav-menu{
-        display: none;
-    }
-    
+/* Menu Slider */
 
-}
-@media only screen and (max-width : 375px) {
-    footer{
-        display: flex;
-        flex-direction: column;
-        justify-content: space-evenly;
-    }
-    .logo-size{
-        justify-content: space-evenly;
-    }
-}
+
 nav{
     top: 0;
     position: fixed;
@@ -155,44 +129,16 @@ nav{
     width: 100%;
     height: 100vh;
     background-color: #e6d1d1;
-    border-style: solid;
-    border-width: 2px;
-    border-color: #6E7785;
     opacity: 1;
     transition-duration: 0.3s;
-    transform : translateX(-500px);
+    transform : translateX(-580px);
 }
 .nav-menu-animation{
     transform : translateX(0);
 }
-.nav-slider{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 0;
-    padding: 20px;
-    height: 75vh;
-    justify-content: space-evenly;
-}
-.nav-slider-menu-x{
-    top: 66px;
-    position: absolute;
-    right: 0;
-    cursor: pointer;
-}
-.nav-slider-menu{
-    display: flex;
-    justify-content: space-evenly;
-    font-size: 3rem;
-    color: #6E7785;
-    opacity: 1;
-}
-.nav-slider-menu:hover {
-    font-size: 3.5rem;
-    text-decoration: underline;
-    font-weight: 900;
-    transition: font-size 0.3s ease-in-out;
-}
+
+/* Footer */
+
 footer{
     position: fixed;
     bottom: 0;
@@ -201,8 +147,9 @@ footer{
     height: 66px;
     background-color: #6E7785;
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
 }
 .footer-content{
     text-align: center;
@@ -226,4 +173,70 @@ footer{
 .svg-inline--fa, .svg-inline--fa.fa-w-16, .svg-inline--fa.fa-w-18, .svg-inline--fa.fa-w-14{
     height: 2.5em;
     width: 2.5em;
+}
+
+/* DESKTOP */
+
+.nav-slider{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0;
+    padding: 20px;
+    height: 75vh;
+    justify-content: space-evenly;
+}
+.nav-slider-item{
+    display: flex;
+    justify-content: space-evenly;
+    font-size: 3rem;
+    color: #6E7785;
+    opacity: 1;
+}
+.nav-slider-item:hover {
+    font-size: 3.5rem;
+    text-decoration: underline;
+    font-weight: 900;
+    transition: font-size 0.3s ease-in-out;
+}
+@media only screen and (min-width : 576px) {
+    .burger{
+        display: none;
+        width: 50px;
+        height: 50px;
+        background-image:url('img/W-logo-white-coralback-_1_.webp');
+    }
+    li {
+        list-style-type: none;
+        padding: 0 10px;
+    }
+    nav{
+        position: relative;
+        margin-top: 0;
+    }
+    .nav-menu{
+        transition-duration: 0s;
+        transform: none;
+        height: 0;
+        background-color: transparent;
+    }
+    .nav-slider {
+        flex-direction: row;
+        height: 0;
+        padding: 0;
+    }
+    .nav-slider-item{
+        color: #000000;
+        font-size: 1.2rem;
+        padding: 0 3rem;
+    }
+    .nav-slider-item:hover{
+        text-decoration: underline;
+        font-size: 1.5rem;
+        font-weight: 900;
+        transition: font-size 0.3s ease-in-out, font-weight 0.3s ease-in-out;
+    }
+    footer{
+        flex-direction: row;
+    }
 }
