--- a/assets/style.css
+++ b/assets/style.css
@@ -38,28 +38,32 @@ ul, li{
     flex-direction: row;
     align-items: center;
     background-color: #ED6C6D;
+    border-bottom: 1px solid #000000;
 }
 
 /* Menu Burger => X */
 
 .burger{
     cursor: pointer;
-    width: 5rem;
-    height: 5rem;
-    position: relative;  
+    width: 4.5rem;
+    height: 4.5rem;
+    position: relative;
+    border-radius: 50%;
+    transition: transform 0.3s;
+    padding: 0px 10px;
 }
 
 .burger span{
-    transform: translateY(-50%);
     position: absolute;
     top: 50%;
+    left:50%;
     display: block;
     width: 2.6rem;
     height: 3px;
     background-color: #FFFFFF;
-    transition: background-color 0.4s ease-in-out;
-    margin: auto 1rem;
+    transition: background-color 0.3s ease-in-out;
     border-radius: 2px;
+    transform: translateY(-50%) translateX(-50%);
 }
 .burger span::before, .burger span::after {
     content:'';
@@ -68,7 +72,7 @@ ul, li{
     width: 100%;
     height: 3px;
     background-color: #FFFFFF;
-    transition: transform 0.4s ease-in-out;
+    transition: transform 0.3s ease-in-out;
     border-radius: 2px;
 }
 .burger span::before{
@@ -83,6 +87,9 @@ ul, li{
 .burger:hover > ::after{
     transform: translateY(12px);
 }
+.burger.active{
+    transform: rotate(180deg);
+}
 .burger.active span {
     background-color: transparent;
 }
@@ -92,16 +99,21 @@ ul, li{
 .burger.active span::after{
     transform: translateY(0px) rotateZ(-45deg);
 }
+.burger:hover{
+    background-color: #eb8080;
+}
 
 /* Logo */
 
 .logo-title{
     display: flex;
     align-items: center;
+    width:100vh;
+    justify-content: center;
 }
 .logo{
     display: flex;
-    height: 66px;
+    height: 40px;
     justify-content: center;
 }
 .coin{
@@ -126,11 +138,12 @@ nav{
     margin-top: 66px;
 }
 .nav-menu{
+    z-index: 99;
     width: 100%;
     height: 100vh;
-    background-color: #e6d1d1;
+    background-color: #0000008f;
     opacity: 1;
-    transition-duration: 0.3s;
+    transition-duration: 0.4s;
     transform : translateX(-580px);
 }
 .nav-menu-animation{
@@ -145,11 +158,13 @@ footer{
     z-index: 100;
     width: 100%;
     height: 66px;
-    background-color: #6E7785;
+    background-color: #ED6C6D;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
+    border-top: 1px solid black;
+    color:#FFFFFF;
 }
 .footer-content{
     text-align: center;
@@ -239,4 +254,7 @@ footer{
     footer{
         flex-direction: row;
     }
+}
+@media only screen and (min-width : 576px) {
+
 }
