--- a/assets/css/variables.style.css
+++ b/assets/css/variables.style.css
@@ -1,15 +1,13 @@
 .theme-light:root {
-    --background-color: #FFFFFF;
-    --text-color: #000000;
-
-    /* Theme toggler */
-    --toggle-color: #000000;
+    --background-color: rgb(83, 83, 83);
+    --primary-color: #C7C7C7;
+    --secondary-color: #536390;
+    --heading-color: #ED6C6D;
 }
 
 .theme-dark:root {
-    --background-color: #1A1A1A;
-    --text-color: #FFFFFF;
-
-    /* Theme toggler */
-    --toggle-color: #FFFFFF;
+    --background-color: #161625;
+    --primary-color: #E1E1FF;
+    --secondary-color: #818CAB;
+    --heading-color: #122044;
 }
