--- a/assets/style.css
+++ b/assets/style.css
@@ -31,8 +31,8 @@ ul, li{
     top: 0;
     position: fixed;
     width: 100vw;
-    height: 66px;
-    line-height: 66px;
+    height: 10vh;
+    line-height: 10vh;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -44,13 +44,14 @@ ul, li{
 
 .burger{
     cursor: pointer;
-    width: 4.5rem;
-    height: 4.5rem;
+    width: 8vw;
+    height: 8vh;
     position: relative;
     border-radius: 50%;
-    transition: transform 0.3s;
-    margin: 4px 10px;
+    transition: transform 0.2s;
+    margin: 1vh;
     z-index: 100;
+    padding: 0 1.5vh;
 }
 .burger:active{
     background-color: #eb8080;
@@ -60,10 +61,10 @@ ul, li{
     top: 50%;
     left: 50%;
     display: block;
-    width: 2.6rem;
-    height: 3px;
+    width: 5vh;
+    height: 4px;
     background-color: #FFFFFF;
-    transition: background-color 0.3s ease-in-out;
+    transition: background-color 0.2s ease-in-out;
     border-radius: 2px;
     transform: translateY(-50%) translateX(-50%);
 }
@@ -72,9 +73,9 @@ ul, li{
     position: absolute;
     display: block;
     width: 100%;
-    height: 3px;
+    height: 4px;
     background-color: #FFFFFF;
-    transition: transform 0.3s ease-in-out;
+    transition: transform 0.2s ease-in-out;
     border-radius: 2px;
 }
 .burger span::before{
@@ -112,7 +113,7 @@ ul, li{
 }
 .logo{
     display: flex;
-    height: 40px;
+    height: 8vh;
     justify-content: center;
 }
 .coin{
@@ -138,8 +139,9 @@ nav{
 }
 .nav-menu{
     z-index: 99;
+    top: 0.5vh;
     width: 100%;
-    height: 100vh;
+    height: 82vh;
     background-color: #0000008f;
     opacity: 1;
     transition-duration: 0.4s;
@@ -156,7 +158,7 @@ footer{
     bottom: 0;
     z-index: 100;
     width: 100%;
-    height: 66px;
+    height: 10vh;
     background-color: #ED6C6D;
     display: flex;
     flex-direction: column;
@@ -169,9 +171,21 @@ footer{
     cursor: pointer;
     text-align: center;
     font-size: 1.2rem;
-    padding: 0.5rem 2rem;  
+    padding: 2px 4px;
+    margin: 3px;
 }
+.footer-contact{
+    display: flex;
+    list-style-type: none;
+    margin-block-start: 0;
+    margin-block-end: 0;
+    margin-inline-start: 0;
+    margin-inline-end: 0;
+    padding-inline-start: 0;
+}
+.footer-contact-item{
 
+}
 /* Footer Animation */
 
 .footer-content:active{
@@ -179,16 +193,23 @@ footer{
     transition: font-size 0.3s ease-in-out;
 }
 .logo-reseaux-sociaux{
-    justify-content: space-evenly;
     display: flex;
     flex-direction: row;
 }
 .logo-size{
-    padding: 0 0.5rem;
+    display: flex;
+    cursor: pointer;
+    padding: 2px;
+    margin: 3px;
+}
+.logo-size:active{
+    border-radius: 4px;
+    background-color: #eb8080;
+    transition: font-size 0.3s ease-in-out;
 }
 .svg-inline--fa, .svg-inline--fa.fa-w-16, .svg-inline--fa.fa-w-18, .svg-inline--fa.fa-w-14{
-    height: 2.5em;
-    width: 2.5em;
+    height: 2em;
+    width: 2em;
 }
 
 /* DESKTOP */
@@ -198,30 +219,31 @@ footer{
     flex-direction: column;
     align-items: center;
     margin: 0;
-    padding: 20px;
-    height: 75vh;
+    padding: 0;
+    height: 80vh;
     justify-content: space-evenly;
 }
 .nav-slider-item{
     display: flex;
     justify-content: space-evenly;
     font-size: 3rem;
-    color: #6E7785;
+    color: #000000;
     opacity: 1;
 }
-.nav-slider-item:hover {
+.nav-slider-item:active {
     font-size: 3.5rem;
-    text-decoration: underline;
     font-weight: 900;
     transition: font-size 0.3s ease-in-out;
+    background-color: gray;
+    width: 60vw;
 }
 
 @media only screen and (min-width : 576px) {
     .burger{
         display: none;
-        width: 50px;
-        height: 50px;
-        background-image:url('img/W-logo-white-coralback-_1_.webp');
+        width: 8vw;
+        height: 8vh;
+        background-image:url('assets/img/Copie_de_logo-white-transparentback_1.png');
     }
     li {
         list-style-type: none;
@@ -232,31 +254,61 @@ footer{
         margin-top: 0;
     }
     .nav-menu{
+        display: flex;
         transition-duration: 0s;
         transform: none;
-        height: 0;
+        top: 0vh;
+        height: 10vh;
         background-color: transparent;
     }
     .nav-slider {
         flex-direction: row;
-        height: 0;
+        height: 10vh;
         padding: 0;
+        margin-block-start: 0;
+        margin-block-end: 0;
+        margin-inline-start: 0;
+        margin-inline-end: 0;
+        padding-inline-start: 0;
     }
     .nav-slider-item{
-        color: #000000;
+        color: white;
+        cursor: pointer;
+        text-align: center;
         font-size: 1.2rem;
-        padding: 0 3rem;
+        padding: 0 4px;
+        height: min-content;
+        width: 15vw;
     }
     .nav-slider-item:hover{
-        text-decoration: underline;
-        font-size: 1.5rem;
-        font-weight: 900;
-        transition: font-size 0.3s ease-in-out, font-weight 0.3s ease-in-out;
+        background-color: #eb8080;
     }
     footer{
         flex-direction: row;
     }
+    .footer-content{
+        display: flex;
+        bottom: 0vh;
+        height: 10vh;
+        margin: 0;
+    }
+    .footer-contact{
+        height: 10vh;
+        align-items: center;
+    }
+    .footer-contact:hover{
+        background-color: #eb8080;
+    }
 }
-@media only screen and (min-width : 576px) {
+@media only screen and (min-width : 768px) {
+
+}
+@media only screen and (min-width : 992px) {
+
+}
+@media only screen and (min-width : 1200px) {
+
+}
+@media only screen and (min-width : 1400px) {
 
 }
