--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,6 @@ html, body{
     font-weight: normal;
     font-style: normal;
     font-display: swap;
-    font-size: CALC(1em * 0.8);
     font-weight: bold;
 }
 h2 {
@@ -45,6 +44,7 @@ ul, li{
     flex-direction: row;
     align-items: center;
     background-color: #ED6C6D;
+    font-size: CALC(1em * 0.8);
 }
 .burger{
     padding: 25px;
@@ -161,10 +161,13 @@ nav{
     border: 1px solid #ED6C6D;
     box-shadow: 3px 2px 7px grey;
     border-radius: 10px;
-    transition-duration: 1s;
+    max-height: 20vh;
+    transition: translate 1s;
 }
 
+
 .header{
+    width: 100%;
     height: 20vh;
     justify-content: center;
     align-items: center;
@@ -205,27 +208,45 @@ nav{
 
 .text-description{
     display: none;
+    padding: 0px 10px 0px;
 }
 
 .hidden + .invert-container{
     translate: -110vw;
-    transition-duration: 1s;
 }
 
 .hidden{
     translate: 110vw;
 }
 
+.item-duplicated{
+    position: relative;
+    transition: max-height 1s;
+    max-height: 100vh;
+    margin: 0;
+}
+
 .open{
     overflow: scroll;
-    position: relative;
-    z-index: 10;
-    transform: scaleY();
-    transition-duration: 1s;
+    max-height: 100vh;
+    transition: max-height 1s;
 }
 
 .open .text-description{
     display: flex;
+}
+
+.thumbnail-container{
+    display: flex;
+    align-items: flex-start;
+    z-index: 100;
+    position: absolute;
+    top: 0;
+    left: 0;
+    max-width: 100vw;
+    max-height: 100vh;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 @media (orientation: landscape) {
@@ -234,6 +255,18 @@ nav{
     }
 
     .item{
+        max-height: 40vh;
+    }
+
+    .header{
         height: 40vh;
+    }
+
+    .open{
+        max-height: 100vh;
+    }
+
+    .thumbnail-container{
+        height: 100vh;
     }
   }
