--- a/assets/css/article.style.css
+++ b/assets/css/article.style.css
@@ -1,6 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
-
 .article {
     width: 100%;
 }
@@ -32,6 +29,10 @@
     width: 100%;
 }
 
+.article__wrapper:nth-child(2) > .article__access {
+    flex-direction: row-reverse;
+}
+
 .article__img {
     width: 25vw;
 }
@@ -43,33 +44,92 @@
 }
 
 @media screen and (min-width: 1200px) {
+    .article {
+        display: flex;
+    }
+
+    .article__wrapper {
+        display: flex;
+        align-items: center;
+        flex-direction: column-reverse;
+        justify-content: center;
+        width: 100%;
+        margin: 0;
+    }
+
+    .article__wrapper + .article__wrapper > .article__title {
+        border-top: none;
+    }
+
+    .article__wrapper .article__title:first-child,
+    .article__wrapper > .article__title {
+        width: 10vw;
+        margin-top: 1vh;
+        padding: 0;
+    }
+
+    .article__access {
+        align-items: flex-start;
+        justify-content: center;
+        width: 10vw;
+    }
+
+    .article__access:hover > * {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .article__access:hover .article__img {
+        filter: brightness(10%);
+    }
+
+    .article__img {
+        width: 10vw;
+    }
+
+    .article__description {
+        position: absolute;
+        top: inherit;
+        display: none;
+        width: 10vw;
+        height: 10vw;
+        margin: 0;
+    }
+
+    .article__description,
+    .article__description > a {
+        background-color: transparent;
+    }
+
     .article__video {
         display: flex;
-        width: 30vw;
         overflow: hidden;
+        width: 30vw;
     }
 
     .article__video + .article__video {
-        margin-top: 5vh;
+        margin-top: 3vh;
     }
 
     .article__thumbnail {
+        align-self: center;
         width: 5vw;
+        height: 5vw;
     }
 
     .article__complement {
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
-        justify-self: flex-end;
+        justify-content: space-evenly;
         width: 100%;
         margin-left: 1vw;
+        justify-self: flex-end;
     }
 
     .article__complement .article__title {
-        text-align: left;
         font-size: 2rem;
         width: 100%;
+        text-align: left;
     }
 
     .article__complement .article__title:first-child {
@@ -82,14 +142,17 @@
     }
 
     .article__complement .article__description {
-        text-align: left;
+        font-size: 1.5rem;
+        position: relative;
+        display: unset;
+        height: auto;
         margin-left: 0;
-        font-size: 1.3rem;
+        text-align: left;
     }
 
     .article__complement .article__tags {
+        font-family: Raleway, sans-serif;
         font-size: 1.2rem;
         font-weight: bold;
-        font-family: Raleway, sans-serif;
     }
 }
