--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -162,7 +162,7 @@ nav{
     box-shadow: 3px 2px 7px grey;
     border-radius: 10px;
     max-height: 20vh;
-    transition: translate 1s;
+    transition: translate 1s, max-height 1s, transform 1s;
 }
 
 
@@ -221,15 +221,22 @@ nav{
 
 .item-duplicated{
     position: relative;
-    transition: max-height 1s;
-    max-height: 100vh;
+    max-height: 20vh;
     margin: 0;
+    transform: translateY(0) scale(1);
+    -webkit-transition: all 1s;
+    transition: all 1s;
 }
 
 .open{
-    overflow: scroll;
     max-height: 100vh;
-    transition: max-height 1s;
+}
+
+
+.move{
+    -webkit-transform: translateY(50px) scale(1.05);
+    transform: translateY(50px) scale(1.05);
+    transition: all 1s;
 }
 
 .open .text-description{
@@ -244,9 +251,10 @@ nav{
     top: 0;
     left: 0;
     max-width: 100vw;
-    max-height: 100vh;
+    height: 100vh;
     padding-left: 10px;
     padding-right: 10px;
+    transition: transform 1s;
 }
 
 @media (orientation: landscape) {
