--- a/assets/css/variables.homepage.css
+++ b/assets/css/variables.homepage.css
@@ -7,7 +7,10 @@
 }
 
 .theme-dark:root {
+    /* Background colors */
     --background-color: #0B0920;
+
+    /* Text colors */
     --primary-color: #E1E1FF;
     --secondary-color: #818CAB;
     --secondary-color-transparent: rgba(129, 140, 171, .7);
