--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
 
 body{
     margin: 0;
@@ -126,6 +127,18 @@ nav{
 }
 
 /* Team */
+.text{
+    font-family: 'Roboto';
+}
+
+.text-container{
+    padding: 10px;
+}
+
+.team-title{
+    width: 100%;
+    text-align: center;
+}
 
 .container{
     display: flex;
@@ -155,6 +168,7 @@ nav{
     justify-content: flex-end;
     align-items: center;
     flex-wrap: wrap;
+    overflow: hidden;
     align-items: center;
     margin-top: 10px;
     margin-bottom: 10px;
@@ -179,7 +193,7 @@ nav{
     top: 0;
     left: 0;
     width: 100%;
-    height: 20vh;
+    height: 100%;
     opacity: 0;
     z-index: 10;
     padding: 0;
@@ -207,8 +221,11 @@ nav{
 }
 
 .text-description{
+    font-family: 'Roboto';
+    text-align: center;
     display: none;
     padding: 0px 10px 0px;
+    margin-top: 10px;
 }
 
 .hidden + .invert-container{
@@ -234,8 +251,8 @@ nav{
 
 
 .move{
-    -webkit-transform: translateY(50px) scale(1.05);
-    transform: translateY(50px) scale(1.05);
+    -webkit-transform: scale(1.05) translateY(-50px);
+    transform: scale(1.05) translateY(-50px);
     transition: all 1s;
 }
 
@@ -277,4 +294,52 @@ nav{
     .thumbnail-container{
         height: 100vh;
     }
+  }
+
+  @media screen and (min-width: 992px) {
+      #body-container{
+        min-height: 100vh;
+      }
+
+      #main-container{
+          flex-direction: row;
+      }
+
+      .item, .invert-container{
+        flex-direction: column;
+        max-height: 50vh;
+        width: 20%;
+        margin: 20px;
+        height: 50vh;
+        align-items: center;
+        justify-content: flex-start;
+        flex-wrap: nowrap;
+    }
+
+    .button{
+        display: none;
+    }
+
+    .header, .invert-header{
+        order: 1;
+        height: 50%;
+        flex-direction: column-reverse;
+        padding: 0;
+    }
+
+    .profil-img{
+        margin-top: 10px;
+        width: 35%;
+    }
+
+    .text-description{
+        display: flex;
+        order: 2;
+        height: 50%;
+        overflow: scroll;
+    }
+
+
+
+
   }
