--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,7 @@ html, body{
 }
 h2 {
     margin: 0;
+    margin-top: 10px;
 }
 a{
     text-decoration: none;
@@ -247,6 +248,7 @@ nav{
 
 .open{
     max-height: 100vh;
+    transition: max-height 1s;
 }
 
 
