--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -177,7 +177,9 @@ nav{
     box-shadow: 3px 2px 7px grey;
     border-radius: 10px;
     max-height: 20vh;
-    transition: translate 1s, max-height 1s, transform 1s;
+    transform: translateY(0) scale(1);
+    -webkit-transition: max-height 1s, translate 1s, transform 1s;
+    transition: max-height 1s, translate 1s, transform 1s;
 }
 
 
@@ -224,7 +226,6 @@ nav{
 .text-description{
     font-family: 'Roboto';
     text-align: center;
-    display: none;
     padding: 0px 10px 0px;
     margin-top: 10px;
 }
@@ -235,27 +236,17 @@ nav{
 
 .hidden{
     translate: 110vw;
-}
-
-.item-duplicated{
-    position: relative;
-    max-height: 20vh;
-    margin: 0;
-    transform: translateY(0) scale(1);
-    -webkit-transition: all 1s;
-    transition: all 1s;
-}
+} 
 
 .open{
     max-height: 100vh;
-    transition: max-height 1s;
 }
 
 
 .move{
+    margin: 0;
     -webkit-transform: scale(1.05) translateY(-50px);
     transform: scale(1.05) translateY(-50px);
-    transition: all 1s;
 }
 
 .open .text-description{
@@ -263,17 +254,21 @@ nav{
 }
 
 .thumbnail-container{
+    background-color: rgba(0,0,0,0);
     display: flex;
     align-items: flex-start;
     z-index: 100;
     position: absolute;
     top: 0;
     left: 0;
-    max-width: 100vw;
-    height: 100vh;
+    height: 100%;
     padding-left: 10px;
     padding-right: 10px;
-    transition: transform 1s;
+    transition: background-color 1s; 
+}
+
+.show-div{
+    background-color: rgba(0,0,0,0.3);
 }
 
 @media (orientation: landscape) {
