--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -153,9 +153,9 @@ nav{
 }
 
 .profil-img{
-    width: 25%;
+    width: 15vh;
+    height: 15vh;
     border-radius: 50%;
-    max-height: 70%;
     overflow: hidden;
 }
 
@@ -217,6 +217,7 @@ nav{
     height: 80%;
     justify-content: center;
     align-items: center;
+    font-size: 1.5em;
 }
 
 .invert-description{
@@ -240,6 +241,7 @@ nav{
 
 .open{
     max-height: 100vh;
+    padding-bottom: 10px;
 }
 
 
@@ -262,6 +264,9 @@ nav{
     top: 0;
     left: 0;
     height: 100%;
+    margin: 0;
+    padding-top: 0;
+    padding-bottom: 0;
     padding-left: 10px;
     padding-right: 10px;
     transition: background-color 1s; 
@@ -288,10 +293,16 @@ nav{
         max-height: 100vh;
     }
 
-    .thumbnail-container{
-        height: 100vh;
+    .profil-img{
+        width: 30vh;
+        height: 30vh;
     }
+
+    .profil-description {
+        font-size: 2em;
   }
+
+}
 
   @media screen and (min-width: 992px) {
       #body-container{
@@ -326,7 +337,13 @@ nav{
 
     .profil-img{
         margin-top: 10px;
-        width: 35%;
+        width: 15vh;
+        height: 15vh;
+    }
+
+    .profil-description{
+        font-size: 1em;
+        height: auto;
     }
 
     .text-description{
@@ -335,8 +352,5 @@ nav{
         height: 50%;
         overflow: scroll;
     }
-
-
-
 
   }
