--- a/assets/css/article.homepage.css
+++ b/assets/css/article.homepage.css
@@ -47,8 +47,6 @@
     .article {
         display: flex;
         justify-content: space-between;
-        padding-left: 10vw;
-        padding-right: 10vw;
     }
 
     .article__wrapper {
@@ -72,9 +70,25 @@
     }
 
     .article__access {
+        overflow: hidden;
         align-items: flex-start;
         justify-content: center;
         width: 10vw;
+    }
+
+    .article__access a {
+        font-size: 2rem;
+        line-height: 100%;
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        height: 1.5vw;
+        text-align: center;
+        text-decoration: none;
+    }
+
+    .article__access > p > a {
+        background-color: var(--primary-color);
     }
 
     .article__access:hover > * {
@@ -82,8 +96,14 @@
         flex-direction: column;
     }
 
+    .article__access:hover > p,
+    .article__access:hover a {
+        overflow: hidden;
+        color: var(--secondary-color);
+    }
+
     .article__access:hover .article__img {
-        filter: brightness(10%);
+        filter: brightness(50%);
     }
 
     .article__img {
